--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,16 @@ services:
       - "80:5000"
     environment:
       -  PORT=5000
-    depends_on:
-      - "redis"
+    # depends_on:
+    #   - "redis"
 
-  redis:
-    image: redis:alpine
-    container_name: redis
-    ports:
-      - "56379:6379"
-    networks:
-      - osmapi-network
+  # redis:
+  #   image: redis:alpine
+  #   container_name: redis
+  #   ports:
+  #     - "56379:6379"
+  #   networks:
+  #     - osmapi-network
 
   open-stock-market-api-swagger:
     image: swaggerapi/swagger-ui:v3.19.4
