--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/camilobmoreira/Open-Market-Stock-API#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-swagger-generator": "^1.1.17"
+    "express-swaggerize-ui": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
