--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "express-swaggerize-ui": "^1.1.0",
+    "redis": "^3.0.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
